[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "upss"
version = "1.1.0"
description = "Universal Prompt Security Standard - Python Implementation"
readme = "README.md"
authors = [
    {name = "UPSS Contributors", email = "security@upss-standard.org"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries",
]
keywords = ["security", "llm", "prompt", "ai", "prompt-injection"]
requires-python = ">=3.9"
dependencies = [
    "filelock>=3.12.0",
    "asyncpg>=0.29.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/upss-standard/universal-prompt-security-standard"
Documentation = "https://github.com/upss-standard/universal-prompt-security-standard/tree/main/implementations/python"
Repository = "https://github.com/upss-standard/universal-prompt-security-standard"
Issues = "https://github.com/upss-standard/universal-prompt-security-standard/issues"

[project.scripts]
upss = "upss.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["upss*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --cov=upss --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["upss"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "upss/storage/postgresql.py",  # Stub implementation - not yet implemented
    "upss/core/audit.py",          # Future feature - not yet used
    "upss/core/rbac.py",            # Future feature - not yet used
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
